# ec_generic

./: Cargo.toml  README.md  generate_readme.sh  update_version.sh
src/: elliptic_curve.rs  finite_fields.rs  lib.rs
