[package]
name = "ec-generic"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A generic use elliptic curve library"
homepage = "https://gagiuntoli.com/"
documentation = "https://gagiuntoli.com/"
repository = "https://github.com/gagiuntoli/ec_generic"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
