[package]
name = "ec-generic"
version = "0.1.10"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Guido Giuntoli <gagiuntoli@gmail.com>"]
description = "A generic use elliptic curve library"
documentation = "https://docs.rs/ec-generic"
homepage = "https://gagiuntoli.com/"
repository = "https://github.com/gagiuntoli/ec_generic"
readme = "README.md"
keywords = ["elliptic-curve", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
